--- a/front/src/app/component/add-recipe/add-recipe.component.css
+++ b/front/src/app/component/add-recipe/add-recipe.component.css
@@ -1,3 +1,7 @@
+h1, form label{
+  color: var(--main-color);
+}
+
 form input:focus, form textarea:focus {
   border-color: var(--main-color);
   box-shadow: 0 0 10px 3px var(--main-color);
@@ -6,6 +10,10 @@ form input:focus, form textarea:focus {
 form button {
   background-color: var(--main-color);
   border-color: var(--main-color);
+}
+
+form button:hover{
+  filter: brightness(1.1);
 }
 
 form .text-danger {
