--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -5,7 +5,7 @@
   </section>
   <section class="recipes-wrapper mt-5">
     <div class="title">
-      <h1 class="fw-bold text-capitalize">favorite recipes</h1>
+      <h1 class="fw-bold text-capitalize">your favorite recipes</h1>
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-scroll">
       <div *ngFor="let recipe of recipes">
@@ -28,7 +28,7 @@
   </section>
   <section class="recipes-wrapper mt-5">
     <div class="title d-flex justify-content-between align-items-center">
-      <h1 class="fw-bold text-capitalize">your recipes</h1>
+      <h1 class="fw-bold text-capitalize">your magic</h1>
       <a routerLink="/profile/add-recipe" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-scroll">
