"connecting backend with front all recipes activated routing ,added in backend pending recipes and fixed pivot tables"

--- a/front/src/app/component/recipes/recipes.component.css
+++ b/front/src/app/component/recipes/recipes.component.css
@@ -16,6 +16,9 @@
     font-weight: 600;
     /* font-family: "Oswald", sans-serif; */
 }
+.white{
+    cursor: pointer;
+}
 
 .inline{
     display: inline !important;
