--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -35,23 +35,7 @@
 </section>
 
 <!-- Top Dish Area Section -->
-<section class="top-dish-area" id="categories">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="main-title position-relative">
-                    <h1>Where every dish tells a story.</h1>
-                    <div class="round-planet planet">
-                        <div class="round-planet planet2">
-                            <div class="shape shape1"></div>
-                            <div class="shape shape2"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<app-top-dish-area title="Where every dish tells a story."></app-top-dish-area>
 
 <!-- Categories Section -->
 <section class="categories">
@@ -135,23 +119,7 @@
 </div>
 
 <!-- Top Dish Area Section -->
-<section class="top-dish-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="main-title position-relative">
-                    <h1>Taste the magic in every recipe.</h1>
-                    <div class="round-planet planet">
-                        <div class="round-planet planet2">
-                            <div class="shape shape1"></div>
-                            <div class="shape shape2"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<app-top-dish-area title="Taste the magic in every recipe."></app-top-dish-area>
 
 <!-- Recipes Section -->
 <section class="recipes p-5">
@@ -170,8 +138,8 @@
                     </div>
                 </div>
             }
-            <a class="main-btn recipe" href="#">View All Recipes</a>
         </div>
+        <a class="main-btn recipe" href="#">View All Recipes</a>
     </div>
 </section>
 
@@ -198,4 +166,3 @@
     </div>
 </section>
 
-<app-footer></app-footer>
