updated routes for all pages, updated routing in profile page and finished logic to fetch from database

--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -6,6 +6,7 @@
         src="{{ recipe?.image }}"
         class="w-100 bg-cover object-fit-cover"
         alt="recipe-image"
+        style="height: 60vh;"
       />
     </div>
     <div class="rounded shadow bg-light p-4 mt-3">
