--- a/front/src/app/component/add-recipe/add-recipe.component.html
+++ b/front/src/app/component/add-recipe/add-recipe.component.html
@@ -216,7 +216,7 @@
         add
       </button>
       <a
-        routerLink="/profile"
+        routerLink="/profile/{{ userId }}"
         class="btn btn-outline-dark fw-bold text-capitalize mt-4 ms-4 px-4 py-2"
         >cancel</a
       >
