--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -6,10 +6,10 @@
         src="{{ recipe?.image }}"
         class="w-100 bg-cover object-fit-cover"
         alt="recipe-image"
-        style="height: 60vh;"
+        style="height: 80vh;"
       />
     </div>
-    <div class="rounded shadow bg-light p-4 mt-3">
+    <div class="rounded shadow bg-light p-4 mt-3 w-100">
       <p class="recipe-description text">{{ recipe?.description }}</p>
     </div>
 
