"adding to adout us "

--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -17,6 +17,11 @@
           <img src="assets/img/dinner.png" alt="Dinner" class="img-fluid">
           <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dinner</p>
       </div>
+      <div class="col-lg-1 col-md-6 p-3  col-sm-10 background   mx-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('dessert')" [class.selected]="isCategorySelected('dessert')"  >
+
+        <img src="assets/img/cupcake.png" alt="Dinner" class="img-fluid">
+        <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dessert</p>
+    </div>
   </div>
 </section>
 <section >
