--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -36,5 +36,21 @@
         <span>profile</span>
       </a>
     </li>
+
+    
+    <li>
+      <a routerLink="/login">
+        <i class="fa-solid fa-right-to-bracket"></i>
+        <span>login</span>
+      </a>
+    </li>
+    
+
+    <li>
+      <a routerLink="/register">
+        <i class="fa-solid fa-right-to-bracket"></i>
+        <span>register</span>
+      </a>
+    </li>
   </ul>
 </nav>
