--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -31,8 +31,8 @@ p{
 
 .banner{
   display: flex;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2));
   height: 100vh;  
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .banner .container{
@@ -45,16 +45,14 @@ p{
   width: 500px;
   height: 670px;
   overflow: hidden;
-  background-image: url(/assets/imgs/login1.jpg);
-  background-position: center;
-  background-size: cover;
+  background-color: #eaeaea ;
   border-radius: 20px;
   box-shadow: 7px 25px 50px #000;
 }
 
 .banner .main h1{
   text-align: center;
-  color: white;
+  color: var(--main-color);
   padding-top: 18px;
   font-size: 55px;
 }
@@ -64,6 +62,15 @@ p{
   align-items: center;
 }
 
+.form-group {
+  position: relative;
+}
 
-
-
+.showIcon {
+  position: absolute;
+  right: 28%;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 20px;
+}
