--- a/front/src/app/component/login/login.component.css
+++ b/front/src/app/component/login/login.component.css
@@ -6,7 +6,7 @@
 input{
     width: 50%;
     height: 30px;
-    background: #fff6f6;
+    background: white;
     margin: 15px auto;
     padding: 20px;
     border: none;
@@ -14,23 +14,29 @@ input{
     border-radius: 5px;
 }
 
-button{
-    width: 45%;
-    height: 56px;
-    margin: 35px auto;
-    justify-content: center;
-    background: #573b8a;
-    font-size: 25px;
-    font-weight: bold;
-    border: none;
-    border-radius: 8px;
-    transition: .2s ease-in;
-    display: flex;
-    color: white;
-    align-items: center;
+.btn-auth{
+    font-size: 23px;
+    font-weight: 600;
+    background-color: var(--btn-color);
+    text-align: center;
+    color: #fff;
+    padding: 12px 28px;
+    border: 1px solid var(--btn-color);
+    border-radius: 5px;
+    transition: all 300ms linear 0s;
+    text-transform: capitalize;
+    box-shadow: -10px 10px 40px var(--boxShadow-color);
+    margin: 20px auto 0;
+    max-width: 200px;
 }
 
-button:hover{
-    background: #6d44b8;
+.btn-auth:hover{
+    background-color: white;
+    color: var(--btn-color);
 }
 
+.switch{
+    color: var(--main-color);
+    font-size: 20px;
+    font-weight: 600;
+}
