Pop-up cards for login and registration pages.

--- a/front/src/app/component/login/login.component.css
+++ b/front/src/app/component/login/login.component.css
@@ -1,12 +1,8 @@
 
-.main.signin{
-    height: 450px;
-}
-
 input{
     width: 50%;
     height: 30px;
-    background: white;
+    background-color: #eee;
     margin: 15px auto;
     padding: 20px;
     border: none;
@@ -35,8 +31,3 @@ input{
     color: var(--btn-color);
 }
 
-.switch{
-    color: var(--main-color);
-    font-size: 20px;
-    font-weight: 600;
-}
