--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -37,20 +37,53 @@
       </a>
     </li>
 
-    
+    <!-- Login -->
     <li>
-      <a routerLink="/login">
+      <a data-bs-toggle="modal" data-bs-target="#loginModal">
         <i class="fa-solid fa-right-to-bracket"></i>
         <span>login</span>
       </a>
     </li>
-    
 
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title" id="exampleModalLabel">Sign In</h1>
+          </div>
+          <div class="modal-body">
+            <app-login></app-login>
+            <p class="mt-4 switch">Already have account!
+              <a class="switchCard" data-bs-toggle="modal" data-bs-target="#registerModal">Register</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div> 
+
+    <!-- Register -->
     <li>
-      <a routerLink="/register">
+      <a data-bs-toggle="modal" data-bs-target="#registerModal">
         <i class="fa-solid fa-right-to-bracket"></i>
         <span>register</span>
       </a>
     </li>
+
+    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title" id="exampleModalLabel">Sign Up</h1>
+          </div>
+          <div class="modal-body">
+            <app-register></app-register>
+            <p class="mt-4 switch">Don't hava account!
+              <a class="switchCard" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </ul>
 </nav>
