Handle not found Page

--- a/front/src/app/component/login/login.component.css
+++ b/front/src/app/component/login/login.component.css
@@ -31,3 +31,8 @@ input{
     color: var(--btn-color);
 }
 
+form input:focus, form textarea:focus {
+    border-color: var(--main-color);
+    box-shadow: 0 0 10px 3px var(--main-color);
+}
+
