--- a/front/src/app/component/register/register.component.html
+++ b/front/src/app/component/register/register.component.html
@@ -88,7 +88,7 @@
     }
 
     <!-- Submit Btn -->
-    <button type="submit" class="btn btn-auth mt-4 d-flex" [disabled]="registerForm.invalid &&
+    <button type="submit" class="btn btn-auth mt-4 d-flex" [disabled]="registerForm.invalid ||
         registerForm.controls['pass'].value  != registerForm.controls['confirmPass'].value">Register
     </button>
 </form>
