"made style and functions and connection for edit-profile page"

--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -3,7 +3,7 @@
     <h1 class="recipe-title">{{ recipe?.name }}</h1>
     <div class="w-100 mt-3 border p-0">
       <img
-        src="{{ recipe?.recipe.image }}"
+        src="{{ recipe?.image }}"
         class="w-100 bg-cover object-fit-cover"
         alt="recipe-image"
         style="height: 80vh;"
@@ -17,7 +17,7 @@
       <div class="col-md-4 mb-4 mb-md-0">
         <h3 class="title text-uppercase">ingredients</h3>
         <ul class="body mt-2">
-          <li  *ngFor="let ingredient of recipe?.recipe.ingredients "><i class="fa-solid fa-utensils me-2"></i>{{ ingredient.name }}</li>
+          <li  *ngFor="let ingredient of recipe?.ingredients "><i class="fa-solid fa-utensils me-2"></i>{{ ingredient.name }}</li>
         </ul>
       </div>
       <div class="col-md-6">
