--- a/front/src/app/component/profile/edit-profile/edit-profile.component.html
+++ b/front/src/app/component/profile/edit-profile/edit-profile.component.html
@@ -1,1 +1,23 @@
-<p>edit-profile works!</p>
+<div class="container  d-flex justify-content-center">
+    <div class="w-50">
+        <h1 class="h3 text-center fw-bold text-uppercase mb-4 col-12">Edit</h1>
+    <form [formGroup]="EditForm" (ngSubmit)="EditUser()">
+      <div class="mb-3">
+        <label for="Username" class="form-label fs-5">Name</label>
+        <input type="text"  id="Username" formControlName="Username"  class="form-control">
+      </div>
+      <div class="mb-3">
+        <label for="DOB" class="form-label fs-5">Date of Birth</label>
+        <input type="date"  id="DOB" formControlName="DOB"  class="form-control">
+      </div>
+      <label for="gender" class="form-label fs-5">
+          Gender
+      </label>
+      <div class="form-check" *ngFor='let option of gender; let i = index'>
+        <input class="form-check-input" type="radio"  [value]='option' name="gender" formControlName="gender" id="gender" >{{option}}
+      </div>
+
+      <button type="submit" class="btn text-light mt-4 " >Edit</button>
+    </form>
+    </div>
+  </div>
