edit in navbar section

--- a/front/src/app/component/footer/footer.component.html
+++ b/front/src/app/component/footer/footer.component.html
@@ -4,7 +4,7 @@
         <div class="row">
             <!-- Logo and Introduction -->
             <div class="col-lg-6 col-md-12 logoContent d-flex flex-column flex-md-row align-items-start">
-                <img src="assets/imgs/logo.png" alt="" class="w-50 me-4 mb-3 mb-md-0">
+                <img [src]="logo" alt="" class="w-50 me-4 mb-3 mb-md-0">
                 <div class="footerTitle">
                     <h1 class="heading">Small Budget? Big Flavor!</h1>
                     <p class="w-100">
