--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -98,7 +98,7 @@
                 </div>
             }
         </div>
-        <a class="main-btn recipe" href="#">View All Latest</a>
+        <a class="main-btn recipe" routerLink="/recipes">View All Latest</a>
     </div>
 </section>
 
@@ -139,7 +139,7 @@
                 </div>
             }
         </div>
-        <a class="main-btn recipe" href="#">View All Recipes</a>
+        <a class="main-btn recipe" routerLink="/recipes">View All Recipes</a>
     </div>
 </section>
 
@@ -159,7 +159,7 @@
                         Hi! We are the MDR Team, and this is my cozy space on the internet, supercharged with butter, flour, 
                         and copious amounts of pasta. Stay awhile, won't you?
                     </p>
-                    <a class="main-btn shadow-none" href="#">About Us</a>
+                    <a class="main-btn shadow-none" routerLink="/about">About Us</a>
                 </div>
             </div>
         </div>
