--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -1,93 +1,90 @@
 /* Navbar styles */
 .navbar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px 20px;
-  background-color: white;
-  border-bottom: 1px solid #eaeaea;
+  padding: 20px 70px;
 }
 
-.logo img {
+/* .logo img {
   height: 80px;
-  width: 100px;
+  width: 140px;
+} */
+
+/* Search */
+.search-bar{
+  position: relative;
+}
+.search-bar input {
+  width: 500px; 
+  padding: 10px 10px;
+  border : none;
+  outline: none;
+  background-color: #EEE;
+}
+.search-bar i{
+  position: absolute;
+  top: 47%;
+  right: 3%;
+  font-size: 20px;
+  color: var(--main-color);
+  transform: translateY(-50%);
 }
 
+.search-bar input:focus, .search-bar textarea:focus {
+  border-color: var(--main-color);
+  box-shadow: 0 0 10px 3px var(--main-color);
+}
 
+/* links */
 .nav-links {
   display: flex;
   list-style: none;
-  gap: 60px; 
+  gap: 55px; 
   padding: 0;
   margin: 0;
-}
-
-.nav-links li {
-  text-align: center;
 }
 
 .nav-links a {
   text-decoration: none;
   color: black;
-  font-size: 14px;
   text-transform: capitalize;
-  letter-spacing: 1px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.nav-links img {
-  height: 24px;
-  margin-bottom: 5px;
-}
-.search-bar{
-  position: relative;
-
-}
-.search-bar .searchicon{
-  position: absolute ;
-  right: 10px;
-  /* top: 5px; */
-  top: 50% ;
-  transform: translateY(-50%);
-}
-.search-bar input {
-  width: 500px; 
-  padding: 10px 10px;
-  border-radius: 5px;
-  border : none;
-  outline: none;
-  background-color: #EEE;
-
+.nav-links i {
+  font-size: 20px;
+  color: var(--main-color);
 }
 
-
-.search-menu {
+.nav-links span{
+  margin-top: 4px;
+  color: var(--btn-color);
+  font-weight: 500;
+  font-size: 20px;
+}
+/* .search-menu {
   display: flex;
   gap: 30px; 
 }
 
 .search-menu a img {
   height: 24px;
-}
+} */
 
 /*  */
 /* Navbar Style */
+/* Test TopArea Section */
 .main-title.round-plane .shape.shape1 {
   left: 37px;
 }
-/* Navbar Style */
 .main-title .round-planet.planet2 {
   width: 70px;
   height: 70px;
 }
-/* Navbar Style */
 .main-title .round-planet {
   width: 140px;
   height: 150px;
 }
-/* Navbar Style */
 .top-dish-area {
   padding: 70px 0 75px;
 }
